--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -11,6 +11,9 @@
         <Style TargetType="Button">
             <Setter Property="Margin" Value="3"/>
         </Style>
+        <Style TargetType="CheckBox">
+            <Setter Property="Margin" Value="6,3"/>
+        </Style>
     </Window.Resources>
     <Grid Name="RootGrid">
         <Grid.RowDefinitions>
@@ -18,7 +21,11 @@
             <RowDefinition Height="*"/>
             <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
-        <ComboBox Name="Containers" ItemsSource="{Binding Containers}" SelectedItem="{Binding CurrentContainer, Mode=TwoWay}">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+        </Grid.ColumnDefinitions>
+        <ComboBox Name="Containers" ItemsSource="{Binding Containers}" SelectedItem="{Binding CurrentContainer, Mode=TwoWay}" Grid.ColumnSpan="2">
             <ComboBox.ItemTemplate>
                 <DataTemplate DataType="CloudBlobContainer">
                     <Label Content="{Binding Name}"/>
@@ -47,7 +54,12 @@
                 </HierarchicalDataTemplate>
             </TreeView.ItemTemplate>
         </TreeView>
-        <StackPanel Orientation="Horizontal" Grid.Row="2">
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="1">
+            <CheckBox IsChecked="{Binding ShowPageBlobs, Mode=TwoWay}">Page blobs</CheckBox>
+            <CheckBox IsChecked="{Binding ShowBlockBlobs, Mode=TwoWay}">Block blobs</CheckBox>
+            <CheckBox IsChecked="{Binding ShowAppendBlobs, Mode=TwoWay}">Append blobs</CheckBox>
+        </StackPanel>
+        <StackPanel Orientation="Horizontal" Grid.Row="2" Grid.ColumnSpan="2">
             <Button Command="{Binding LoginCommand}">Login</Button>
             <Button Command="{Binding NewSnapshotCommand}">New snapshot</Button>
             <Button Command="{Binding RevertSnapshotCommand}">Revert to this snapshot</Button>
