Support for multiline descriptions

--- a/Views/Credentials.xaml
+++ b/Views/Credentials.xaml
@@ -10,7 +10,7 @@
         <Label Name="ShortFieldLabel">Field 1:</Label>
         <TextBox Name="ShortField"/>
         <Label Name="LongFieldLabel">Field 2:</Label>
-        <TextBox Name="LongField" MinLines="2" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True"/>
+        <TextBox Name="LongField" MinLines="2" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" AcceptsReturn="True" AcceptsTab="True" />
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
