Refactoring. Query dialog allows tab-based navigation through the big field. Renamed button to make it less error-prone.

--- a/Views/Credentials.xaml
+++ b/Views/Credentials.xaml
@@ -5,12 +5,12 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AzuureSnapshotManager.Views"
         mc:Ignorable="d" SizeToContent="Height"
-        Title="Window with 2 fields" Width="437">
+        Title="Window with 2 fields" Width="437" WindowStartupLocation="CenterOwner" >
     <StackPanel Orientation="Vertical">
         <Label Name="ShortFieldLabel">Field 1:</Label>
         <TextBox Name="ShortField"/>
         <Label Name="LongFieldLabel">Field 2:</Label>
-        <TextBox Name="LongField" MinLines="2" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" AcceptsReturn="True" AcceptsTab="True" />
+        <TextBox Name="LongField" MinLines="2" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" ScrollViewer.CanContentScroll="True" AcceptsReturn="True"/>
         <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
