--- a/App.xaml
+++ b/App.xaml
@@ -1,7 +1,7 @@
 ﻿<Application x:Class="AzuureSnapshotManager.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:AzuureSnapshotManager"
+             xmlns:local="clr-namespace:AzuureSnapshotManager.ViewModels"
              StartupUri="Views/MainWindow.xaml">
     <Application.Resources>
         <local:MainVm x:Key="mainvm"/>
